--- a/package.json
+++ b/package.json
@@ -12,14 +12,24 @@
     "@types/node": "20.4.8",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.14",
+    "@types/react-slick": "^0.23.10",
+    "autoprefixer": "^10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
     "next": "13.4.13",
-    "postcss": "8.4.27",
+    "postcss": "^8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "react-icons": "^4.10.1",
+    "react-modal": "^3.16.1",
+    "react-query": "^3.39.3",
+    "react-slick": "^0.29.0",
+    "react-toastify": "^9.1.3",
+    "slick-carousel": "^1.8.1",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-modal": "^3.16.0"
   }
 }
